== trunk

* Major enhancements
 
  * Made equality between objects and dataflow variables more transparent
 
* Minor enhancements
  
  * Made #inspect work with unbound variables to not crash deubggers/repls/etc
 
  * Made relationship between lazy and dataflow behavior more strict

== 0.1.1 / 2009-06-13
 
* Minor enhancements
 
  * Got the "require_path" set correctly so rubygems can be used =)
 

== 0.1.0 / 2009-06-13
 
* 1 major enhancement
 
  * Birthday!